--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "isomorphic-fetch": "^2.2.1",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
+    "react-google-maps": "^9.4.5",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
