--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,9 +15,30 @@
         "react"
     ],
     "rules": {
+        "react/jsx-handler-names": 2,
+        "react/require-render-return": 2,
+        "react/no-unused-state": 2,
+        "react/prefer-stateless-function": 2,
+        "react/no-direct-mutation-state": 2,
+        "react/jsx-key": 2,
+        "react/jsx-uses-vars": 2,
+        "react/jsx-uses-react": 2,
+        "react/jsx-no-duplicate-props": 2,
+        "react/jsx-no-undef": 2,
+        "react/no-multi-comp": 2,
+        "react/jsx-indent-props": [
+            "error",
+            2
+          ],
+        "react/jsx-pascal-case": 2,
+        "react/prop-types": 2,
+        "react/jsx-indent": [
+            "error",
+            2
+          ],
         "indent": [
             "error",
-            4
+            2
         ],
         "linebreak-style": [
             "error",
